[Plugin Hub] Fix overflow in default values in plugin schemas

--- a/app/_assets/stylesheets/pages/extension.less
+++ b/app/_assets/stylesheets/pages/extension.less
@@ -598,6 +598,7 @@ table {
       border-bottom: 1px solid @gray;
       font-size: 14px;
       color: #031f53;
+      overflow-x: scroll;
 
       span:not(:last-of-type)::after {
         content: "|";
